# docbox-manager

./: Cargo.toml  README.md
frontend/: .cta.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/api/: axios.ts
frontend/src/api/auth/: auth.keys.ts  auth.mutations.ts  auth.queries.ts  auth.requests.ts  auth.types.ts
frontend/src/api/docbox/: docbox.keys.ts  docbox.mutations.ts  docbox.mutators.ts  docbox.queries.ts
frontend/src/api/root/: root.keys.ts  root.mutations.ts  root.queries.ts  root.requests.ts  root.types.ts
frontend/src/api/tenant/: tenant.keys.ts  tenant.mutations.ts  tenant.queries.ts  tenant.requests.ts  tenant.types.ts
frontend/src/components/: AuthGuard.tsx  CreateFolderDialog.tsx  CreateLinkDialog.tsx  DocboxProvider.tsx  DocumentBoxesTable.tsx  FilePreviewDialog.tsx  Header.tsx  InitializeGuard.tsx  InitializePage.tsx  LoadingPage.tsx  LoginPage.tsx  PendingMigrations.tsx  PendingMigrationsLoader.tsx  TenantFileBrowser.tsx  TenantMigrateButton.tsx  TenantsMigrateButton.tsx  UploadFileDialog.tsx
frontend/src/components/browser/: DocboxItemsTable.tsx  DocumentBoxBrower.tsx  DocumentBoxBrowerLoader.tsx
frontend/src/components/form/: FormUploadFile.tsx
frontend/src/integrations/tanstack-query/: root-provider.tsx
frontend/src/routes/: index.tsx  login.tsx  tenant.$env.$id.tsx  tenant.create.tsx
src/: auth.rs  config.rs  database.rs  error.rs  logging.rs  main.rs
src/models/: auth.rs  mod.rs  root.rs  tenant.rs
src/routes/: auth.rs  mod.rs  public.rs  root.rs  tenant.rs
