[package]
name = "docbox-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP server
axum = { version = "=0.8.4", features = ["multipart"] }

# HTTP layers for ratelimiting, CORS, and tracing
tower-http = { version = "=0.6.6", features = ["limit", "cors", "trace"] }

# Environment variables 
dotenvy = "=0.15.7"

# Core business logic
docbox-core = { version = "0.1.0", path = "../docbox/packages/docbox-core" }

# Database access
docbox-database = { version = "0.1.0", path = "../docbox/packages/docbox-database" }

# Search access
docbox-search = { version = "0.1.0", path = "../docbox/packages/docbox-search" }

# Asynchronous runtime & Helpers
tokio = { version = "=1.45.1", features = ["full"] }
futures = "=0.3.31"

# Serialization and JSON
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"

# Logging
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }

# Mime types, parsing, extension guessing
mime = "=0.3.17"
mime_guess = "=2.0.5"

# Error handling
anyhow = "=1.0.98"
thiserror = "=2.0.12"

# Iterator utilities
itertools = "=0.14.0"

# AWS configuration
aws-config = { version = "=1.8.0", features = ["behavior-version-latest"] }
tower-sessions = "0.14.0"
rand = "0.8.5"
