[package]
name = "docbox-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP server
axum = { version = "=0.8.4", features = ["multipart"] }

# HTTP layers for ratelimiting, CORS, and tracing
tower-http = { version = "=0.6.6", features = ["limit", "cors", "trace"] }

# Environment variables
dotenvy = "=0.15.7"

# Asynchronous runtime & Helpers
tokio = { version = "=1.46.1", features = ["full"] }
futures = "=0.3.31"

# Serialization and JSON
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"

# Logging
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }

# Mime types, parsing, extension guessing
mime = "=0.3.17"
mime_guess = "=2.0.5"

# Error handling
anyhow = "=1.0.98"
thiserror = "=2.0.12"

# Iterator utilities
itertools = "=0.14.0"

# AWS configuration
aws-config = { version = "=1.8.2", features = ["behavior-version-latest"] }
tower-sessions = "0.14.0"
rand = "0.8.5"
reqwest = { version = "=0.12.22", features = ["json", "stream"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["full"] }
tower = "0.5.2"
# Resource embedding
embeddy = "0.1"

# Core business logic
docbox-core = { version = "0.4.0" }
# Database access
docbox-database = { version = "0.4.0" }
# Search access
docbox-search = { version = "0.4.0" }
# Management access
docbox-management = { version = "0.2.0" }
# Secrets management
docbox-secrets = { version = "0.1.0" }
# Storage access
docbox-storage = { version = "0.1.0" }

[patch.crates-io]
docbox-core = { version = "0.4.0", path = "../docbox/packages/docbox-core" }
docbox-database = { version = "0.4.0", path = "../docbox/packages/docbox-database" }
docbox-search = { version = "0.4.0", path = "../docbox/packages/docbox-search" }
docbox-management = { version = "0.2.0", path = "../docbox/packages/docbox-management" }
docbox-secrets = { version = "0.1.0", path = "../docbox/packages/docbox-secrets" }
docbox-storage = { version = "0.1.0", path = "../docbox/packages/docbox-storage" }
